# AESengine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_MALEK.txt  WOB.sln  core.natvis  vitatoolchain.lua  xmake.lua
AESengine/: .main.cpp.swp  AES_log.txt  AESengine.sln  AESengine.vcxproj  AESengine.vcxproj.filters  CMakeLists.txt  Makefile  Makefile_old  core.natvis  main.cpp  prof_initial.txt  vita_deploy.bash  vita_make_deploy.bash  vita_make_deploy_devkit.bash
AESengine/assets/shaders/: test.phx
AESengine/assets/shaders/HLSL/: draw2d.fs  draw2d.vs  texture2d.vs
AESengine/assets/shaders/vita/: basic2d_fs.cg  basic2d_vs.cg  basic3d_vs.cg  basic_vs.cg  clear_fs.cg  clear_vs.cg
AESengine/src/: engine.cpp  engine.hpp  main.cpp  vita_main.cpp
AESengine/src/UI/: UI.cpp  UI.hpp  imgui.cpp  imgui.hpp
AESengine/src/core/: Optional.hpp  aes.hpp  aesException.cpp  aesException.hpp  allocator.cpp  allocator.hpp  array.hpp  arrayView.hpp  assert.hpp  circularQueue.hpp  color.hpp  console.cpp  console.hpp  context.cpp  coreMacros.hpp  debug.cpp  debug.hpp  debugMath.hpp  dragon4.cpp  dragon4.hpp  error.hpp  format.hpp  geometry.cpp  geometry.hpp  hash.hpp  hashmap.hpp  input.cpp  input.hpp  jobSystem.hpp  macro_helpers.hpp  mat2.hpp  maths.cpp  maths.hpp  os.hpp  profiler.cpp  profiler.hpp  reflection.hpp  simd.hpp  staticArray.hpp  string.hpp  (+13 more)
AESengine/src/core/platformVita/: vitagxm.h
AESengine/src/core/platformWindows/: win_window.cpp  win_window.hpp
AESengine/src/gui/: gui.cpp  gui.hpp
AESengine/src/logic/: scene.hpp
AESengine/src/renderer/: D3D11Model.cpp  D3D11Model.hpp  D3D11renderer.cpp  D3D11renderer.hpp  D3D11shader.cpp  D3D11shader.hpp  FontManager.cpp  FontManager.hpp  Renderer2D.cpp  Renderer2D.hpp  camera.cpp  camera.hpp  color.hpp  draw2d.cpp  draw2d.hpp  fontRenderer.cpp  fontRenderer.hpp  geometry.hpp  immediateRenderer.cpp  immediateRenderer.hpp  material.cpp  material.hpp  model.cpp  model.hpp  phenixslang.hpp  rendererError.hpp  textureUtility.cpp  textureUtility.hpp  vertex.hpp
AESengine/src/renderer/RHI/: RHI.hpp  RHIBuffer.cpp  RHIBuffer.hpp  RHIDevice.hpp  RHIElements.hpp  RHIRenderContext.hpp  RHIRenderTarget.hpp  RHISampler.hpp  RHIShader.hpp  RHITexture.hpp  RHIValidation.cpp  RHIVertexInputLayout.hpp  model.cpp  model.hpp
AESengine/src/renderer/RHI/D3D11/: D3D11BlendState.cpp  D3D11BlendState.hpp  D3D11Buffer.cpp  D3D11Buffer.hpp  D3D11Device.cpp  D3D11Device.hpp  D3D11Elements.cpp  D3D11Elements.hpp  D3D11Model.cpp  D3D11Model.hpp  D3D11RenderTarget.cpp  D3D11RenderTarget.hpp  D3D11Sampler.cpp  D3D11Sampler.hpp  D3D11Swapchain.cpp  D3D11Swapchain.hpp  D3D11Texture.cpp  D3D11Texture.hpp  D3D11globals.hpp  D3D11renderer.cpp  D3D11renderer.hpp  D3D11shader.cpp  D3D11shader.hpp
AESengine/src/renderer/RHI/SceGxm/: gxmBuffer.cpp  gxmBuffer.hpp  gxmCompatibilty.h  gxmDebug.hpp  gxmDevice.cpp  gxmDevice.hpp  gxmElements.cpp  gxmElements.hpp  gxmMemory.cpp  gxmMemory.hpp  gxmRenderTarget.cpp  gxmRenderTarget.hpp  gxmRenderer.cpp  gxmRenderer.hpp  gxmSampler.cpp  gxmSampler.hpp  gxmShader.cpp  gxmShader.hpp  gxmTexture.cpp  gxmTexture.hpp
AESengine/src/renderer/RHI/VitaGL/: vglBuffer.cpp  vglBuffer.hpp  vglRenderer.cpp  vglRenderer.hpp
AESengine/src/spatial/: BSPTree.cpp  BSPTree.hpp  octree.cpp  octree.hpp
AESengine/src/test/: test_RHI.cpp  test_bsp.cpp  test_draw2d.cpp  test_draw3d.cpp  test_font.cpp  test_imgui.cpp  test_jobSystem.cpp  test_octree.cpp  test_string.cpp  tests.hpp
AESengine/vs2015/: AESEngine.sln  AESEngine.vcxproj  AESEngine.vcxproj.filters
test/: xmake.lua
tests/: xmake.lua
tests/test_RHI/: test_RHI.cpp
tests/test_draw2d/: test_draw2d.cpp
tests/test_draw3d/: test_draw3d.cpp
tests/test_font/: test_font.cpp
tests/test_graphics_pipeline/: test_graphics_pipeline.cpp
tests/test_imgui/: test_imgui.cpp
tests/test_string/: test_string.cpp
wobEngine/: AESengine.vcxproj.filters  CMakeLists.txt  core.natvis  engine.ini  vita_deploy.bash
wobEngine/assets/textures/: heightmap.qoi
wobEngine/src/: engine.cpp  engine.hpp
wobEngine/src/UI/: imgui.cpp  imgui.hpp
wobGame/: xmake.lua
wobGame/src/: main.cpp
(+144 files in other folders)
